--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-router": "^7.6.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "zod": "^3.25.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
